<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Global Strings -->
    <string name="ENDPOINT">http://labs.chi.itesm.mx:8080</string>

    <string name="intent_endpoint">ENDPOINT</string>
    <string name="intent_lab_name">LABNAME</string>
    <string name="intent_color">COLOR</string>
    <string name="intent_user_id">USERID</string>
    <string name="intent_allowed_labs">ALLOWEDLABS</string>

    <!-- Login Activity -->
    <string name="user_mat">User ID</string>
    <string name="user_pass">Password</string>
    <string name="user_login">LOGIN</string>
    <string name="user_signup">SIGN UP</string>
    <string name="app_name">Laboratories</string>
    <string name="activity_login_dialog_login_title">Signing in</string>
    <string name="activity_login_dialog_login_content">Please wait…</string>
    <string name="activity_login_snackbar_login_error">Error, wrong id_student or password.</string>

    <!-- Laboratories Activity -->
    <string name="laboratories_activity">Laboratories</string>
    <string name="activity_labs_snackbar_get_labs_error">Error getting your labs, please check your internet connection.</string>

    <!-- Categories Activity -->
    <string name="categories_activity">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- Drawer strings for accessibility -->
    <string name="navigation_drawer_open">Drawer Opened</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <!-- Requests Fragment -->
    <string name="requests_fragment_title">Requests</string>
    <string name="requests_updated">Request ready.</string>
    <string name="requests_verified">Request verified.</string>
    <string name="requests_update_error">Error updating the request.</string>
    <string name="requests_invalid_id">This ID is invalid.</string>
    <string name="request_item_list_item_quantity">Quantity:</string>
    <string name="request_get_dialog_title">Getting requests</string>
    <string name="request_get_dialog_body">Please wait…</string>
    <string name="request_get_dialog_error_title">Error</string>
    <string name="request_get_dialog_error_body">Couldn\'t get the requests.</string>
    <!-- Requests Transition Names -->
    <string name="requests_fragment_transition_name">USER_NAME</string>
    <string name="requests_fragment_transition_id">USER_ID</string>

    <!-- Inventory Fragment -->
    <string name="inventory_fragment_title">Inventory</string>
    <string name="inventory_fragment_transition_name">CATEGORY_NAME</string>
    <string name="inventory_fragment_transition_icon">CATEGORY_ICON</string>
    <!-- AddCategoryActivity-->
    <string name="add_category_post_ok">Category added.</string>
    <string name="add_category_post_error">Couldn\'t create category.</string>
    <string name="add_category_put_ok">Category edited.</string>
    <string name="add_category_put_error">Couldn\'t edit category.</string>
    <string name="add_category_delete_ok">Category deleted.</string>
    <string name="add_category_delete_error">Couldn\'t delete category.</string>

    <!-- Reports Fragment -->
    <string name="reports_fragment_title">Reports</string>

    <!-- Users Fragment -->
    <string name="users_fragment_title">Users</string>
    <!-- New User Dialog -->
    <string name="users_fragment_new_user">Add user</string>
    <string name="users_fragment_dialog_id">User ID</string>
    <string name="users_fragment_dialog_first_name">Name</string>
    <string name="users_fragment_dialog_last_name_1">Last name 1</string>
    <string name="users_fragment_dialog_last_name_2">Last name 2</string>
    <string name="users_fragment_dialog_career">Career</string>
    <string name="users_fragment_dialog_cancel">Cancel</string>
    <string name="users_fragment_dialog_accept">Register</string>
    <string name="signup_activity_detail_uid">Credential</string>
    <!-- Menu -->
    <string name="users_fragment_menu_new_user">Add user</string>
    <string name="users_fragment_menu_reload">Update</string>
    <string name="title_activity_request_detail">RequestDetailActivity</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <!-- Users Transition Names -->
    <string name="users_fragment_transition_name">USER_NAME</string>
    <string name="users_fragment_transition_id">USER_ID</string>
    <string name="users_fragment_transition_career">USER_CAREER</string>
    <!-- Users Add New Material -->
    <string name="users_activity_add_material">Add material</string>
    <string name="users_activity_available_material">Available</string>
    <string name="title_activity_inventory_detail">InventoryDetailActivity</string>
    <string name="menu_inventory_add_category">Add category</string>
    <!-- UserDetailActivity-->
    <string name="users_put_history_ok">Item updated</string>
    <string name="users_put_history_error">Error, couldn\'t update item</string>

    <!-- SignupActivity -->
    <string name="signup_activity">SignupActivity</string>
    <string name="signup_activity_delete">Delete</string>
    <string name="signup_activity_uid">Update</string>
    <string name="signup_empty_data">Error on fields, check again.</string>
    <string name="signup_post_ok">User added.</string>
    <string name="signup_post_error">Couldn\'t create user.</string>
    <string name="signup_put_ok">User edited.</string>
    <string name="signup_put_error">Couldn\'t edit user.</string>
    <string name="signup_delete_ok">User deleted.</string>
    <string name="signup_delete_error">Couldn\'t delete user.</string>

    <!-- AddCategoryActivity -->
    <string name="title_activity_add_category">AddCategoryActivity</string>
    <string name="add_category_name">Name</string>
    <string name="add_category_text">New category</string>

    <!-- AddComponentActivity -->
    <string name="add_component_text">New component</string>
    <string name="title_activity_add_component">AddComponentActivity</string>

</resources>
