<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.itesm.labs.activities.UserDetailActivity">

    <LinearLayout
        android:id="@+id/activity_user_detail_background"
        android:layout_width="fill_parent"
        android:background="@color/primary"
        android:layout_height="200dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:elevation="3dp"
        android:paddingLeft="32dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/activity_user_detail_user_name"
            style="@style/LabsTheme.v21.Light.Text.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/activity_user_detail_background"
            android:text="USERNAME"
            android:transitionName="@string/users_fragment_transition_name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_user_detail_user_name"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_user_detail_user_id"
                style="@style/LabsTheme.v21.Light.Text.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="USERID"
                android:transitionName="@string/users_fragment_transition_id" />

            <TextView
                android:id="@+id/activity_user_detail_user_career"
                style="@style/LabsTheme.v21.Light.Text.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="USERCAREER"
                android:transitionName="@string/users_fragment_transition_career" />

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/activity_user_detail_list"
        android:layout_below="@id/activity_user_detail_background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_user_detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_user_detail_list"
        android:layout_alignRight="@id/activity_user_detail_list"
        android:layout_margin="16dp"
        android:src="@drawable/ic_done_white"
        fab:fab_colorNormal="@color/primary"
        fab:fab_colorRipple="@color/primary_dark" />

</RelativeLayout>
