<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.itesm.labs.activities.AddUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/signup_name_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:elevation="3dp"
            android:gravity="bottom"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_name_til"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@color/md_divider_white">

                <EditText
                    android:id="@+id/signup_name"
                    style="@style/LabsTheme.v21.Light.Text.Display1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="56dp"
                    android:hint="@string/users_fragment_dialog_first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_last_name_1_til"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_name_til">

                <EditText
                    android:id="@+id/signup_last_name_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signup_name_til"
                    android:layout_marginLeft="72dp"
                    android:hint="@string/users_fragment_dialog_last_name_1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/signup_last_name_1_til">

                <EditText
                    android:id="@+id/signup_last_name_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:hint="@string/users_fragment_dialog_last_name_2" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_component_info_layout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/signup_name_layout">

            <LinearLayout
                android:id="@+id/signup_career_layout"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/singup_career_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_career_grey" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_career"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:hint="@string/users_fragment_dialog_career" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_id_layout"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                android:layout_below="@id/signup_career_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/singup_id_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:gravity="center"
                    android:text="#"
                    android:textColor="@color/disabled_text"
                    android:textSize="36sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_id"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:hint="@string/users_fragment_dialog_id" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signup_uid_layout"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                android:layout_below="@id/signup_id_layout"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/singup_uid_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_uid_grey" />

                <TextView
                    android:id="@+id/signup_uid_text"
                    style="@style/LabsTheme.v21.Text.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="12345678" />

                <Button
                    android:id="@+id/signup_uid_update"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/signup_activity_uid"
                    android:textColor="@color/primary_dark"
                    android:textSize="16sp" />
            </LinearLayout>
        </RelativeLayout>

        <ListView
            android:id="@+id/signup_allowed_labs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:minHeight="300dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/activity_signup_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_activity_delete"
                android:textColor="@color/primary_dark"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/activity_signup_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@drawable/ic_done_white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>