<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".LoginActivity">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardElevation="3dp"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_app"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_app"
                android:layout_centerHorizontal="true"
                android:text="Administrador"
                android:textSize="@dimen/abc_text_size_headline_material" />

            <RelativeLayout
                android:id="@+id/login_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/admin"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_vertical_margin">

                <com.rengwuxian.materialedittext.MaterialEditText xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/user_id"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_mat"
                    app:baseColor="@color/primary_text"
                    app:errorColor="@color/material_red"
                    app:floatingLabel="highlight"
                    app:primaryColor="@color/secondary_text" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/user_pass"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_id"
                    android:hint="@string/user_pass"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:layout_below="@id/user_pass"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/ripple_button_login"
                    android:text="@string/user_login"
                    android:textColor="@color/primary_text_light" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>